--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ packages = [{ include = "rag_ingestor", from = "src" }]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
+pre-commit = "^4.2.0"
+black = "^25.1.0"
+ruff = "^0.11.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
