--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,4 +28,4 @@ jobs:
         run: poetry run black --check src tests
 
       - name: Run Ruff
-        run: poetry run ruff src tests
+        run: poetry run ruff check src tests
