--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "httpx (>=0.28.1,<0.29.0)",
     "pathlib (>=1.0.1,<2.0.0)",
-    "uuid (>=1.30,<2.0)"
+    "uuid (>=1.30,<2.0)",
+    "langchain-community (>=0.3.20,<0.4.0)",
+    "pydantic-settings (>=2.8.1,<3.0.0)",
+    "langchain-text-splitters (>=0.3.7,<0.4.0)",
+    "tiktoken (>=0.9.0,<0.10.0)"
 ]
 
 
