--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "langchain-community (>=0.3.20,<0.4.0)",
     "pydantic-settings (>=2.8.1,<3.0.0)",
     "langchain-text-splitters (>=0.3.7,<0.4.0)",
-    "tiktoken (>=0.9.0,<0.10.0)"
+    "tiktoken (>=0.9.0,<0.10.0)",
+    "aiokafka (>=0.12.0,<0.13.0)"
 ]
 
 
