--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "pydantic-settings (>=2.8.1,<3.0.0)",
     "langchain-text-splitters (>=0.3.7,<0.4.0)",
     "tiktoken (>=0.9.0,<0.10.0)",
-    "aiokafka (>=0.12.0,<0.13.0)"
+    "aiokafka (>=0.12.0,<0.13.0)",
+    "datetime (>=5.5,<6.0)"
 ]
 
 
