--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,10 @@ black = "^25.1.0"
 ruff = "^0.11.2"
 pytest-asyncio = "^0.26.0"
 
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
